--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -5,5 +5,19 @@
   <%= @property.address %>
 </p>
 
-<%= link_to 'Edit', edit_property_path(@property) %> |
+<p>
+  <strong>Activation Date:</strong>
+  <%= @property.activation_date %>
+</p>
+
+<p>
+  <strong>Deactivation Date:</strong>
+  <%= @property.deactivation_date %>
+</p>
+
+<p>
+  <strong>Inventory at property:</strong>
+  <%= @inventories.map(&:product_name).join(", ") %>
+</p>
+
 <%= link_to 'Back', properties_path %>
